// {C} Copyright 2019 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

package objstore;

import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "objstore.proto";

option (venice.fileGrpcDest) = "pen-vos";
option (venice.fileCategory) = "objstore";
option (venice.fileApiServerBacked) = false;

service ObjstoreV1 {
    option (venice.apiPrefix)           = "";
    option (venice.apiVersion)          = "v1";

    option (venice.apiGrpcCrudService)  = "Bucket";
    option (venice.apiGrpcCrudService)  = "Object";

    option (venice.apiRestService) = {
        Object: "Object"
        Method: [ "get", "post", "list", "delete", "watch" ]
    };

    option (venice.proxyPrefix) = {
      Path:         "/uploads/images/"
      PathPrefix:   "/apis/v1"
      Backend:      "pen-vos-http"
      DocString:    "Upload system image"
      Response:     "Object"
      FormParams:   [{Name: "file", Type: "file", Required: true, Description: "file to upload"}];
    };

    option (venice.proxyPrefix) = {
      Path:         "/uploads/snapshots/"
      PathPrefix:   "/apis/v1"
      Backend:      "pen-vos-http"
      DocString:    "Upload Config snapshot file"
      Response:     "Object"
      FormParams:   [{Name: "file", Type: "file", Required: true, Description: "file to upload"}];
    };

    // Download file
    rpc DownloadFile(Object) returns (stream StreamChunk) {
        option (google.api.http) = {
            get: "/downloads/tenant/{O.Tenant}/{O.Namespace}/{O.Name}"
            additional_bindings {
                // path for default tenant
                get: "/downloads/{O.Namespace}/{O.Name}"
            }
        };
        option (venice.methodSrvBinaryStream) = true;
    }

    // Download file by prefix
    rpc DownloadFileByPrefix(Object) returns (stream StreamChunk) {
        option (google.api.http) = {
            get: "/downloads/all/tenant/{O.Tenant}/{O.Namespace}/{O.Name}"
        };
        option (venice.methodSrvBinaryStream) = true;
    }
}
